Fix problem on mobile
- Prevent "pull to refresh" so new behavior works...

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,8 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
+
+  overscroll-behavior-y: contain;
 }
 
 * {
